--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -62,7 +62,8 @@
                     <div class="buttons">
                         <a class="button is-light has-text-grey" data-pjax='main' href="{{ url_for('signup') }}"><i
                                 class="fas fa-user-plus"></i>&ensp;Get an account</a>
-                        <a class="button is-light has-text-grey" data-pjax='main' href="{{ url_for('forgot_password') }}"><i
+                        <a class="button is-light has-text-grey" data-pjax='main'
+                           href="{{ url_for('forgot_password') }}"><i
                                 class="fas fa-question-circle"></i>&ensp;Lost password</a>
                         <button type="submit" class="button is-primary">Login&ensp;<i class="fas fa-arrow-right"></i>
                         </button>
