--- a/public/css/pages/profile.css
+++ b/public/css/pages/profile.css
@@ -17,7 +17,7 @@
     z-index: 1;
     transition: all 0.35s ease;
     border-radius: 4px;
-    background: rgba(0,0,0,.6);
+    background: rgba(0, 0, 0, .6);
     backdrop-filter: saturate(180%) blur(2rem);
     pointer-events: none
 }
