--- a/templates/auth/reset_password.html
+++ b/templates/auth/reset_password.html
@@ -34,7 +34,8 @@
                     </div>
                     <br>
                     <div class="buttons">
-                        <button type="submit" class="button is-primary">Continue&ensp;<i class="fas fa-arrow-right"></i></button>
+                        <button type="submit" class="button is-primary">Continue&ensp;<i class="fas fa-arrow-right"></i>
+                        </button>
                     </div>
                 </form>
             </div>
@@ -61,9 +62,11 @@
             <div class="modal-background"></div>
             <div class="modal-card box" style="padding: 3em;">
                 <p class="title is-3 has-text-weight-bold has-text-centered">Oh no! Something broke.</p>
-                <p class="has-text-centered">Password change cannot be perfomed as <b>email link used is invalid or has expired</b>.</p>
+                <p class="has-text-centered">Password change cannot be perfomed as <b>email link used is invalid or has
+                    expired</b>.</p>
                 <br>
-                <a class="button is-light" href="{{ url_for('forgot_password') }}"><i class="fas fa-arrow-right"></i>&ensp;Request new email link</a>
+                <a class="button is-light" href="{{ url_for('forgot_password') }}"><i class="fas fa-arrow-right"></i>&ensp;Request
+                    new email link</a>
             </div>
         </div>
     {% endif %}
