--- a/templates/baseTour.html
+++ b/templates/baseTour.html
@@ -79,7 +79,8 @@
                     </a>
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-item">
-                            <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{ user.profile_img }}');"></div>
+                            <div class="profile-img"
+                                 style="background-image: url('data:image/jpeg;base64, {{ user.profile_img }}');"></div>
                         </a>
 
                         <div class="navbar-dropdown is-boxed is-right">
