--- a/templates/customer/allBookings.html
+++ b/templates/customer/allBookings.html
@@ -5,144 +5,146 @@
 
 
 {% block scripts %}
-<link rel="stylesheet" href="/css/global/shop.css">
-<link rel="stylesheet" href="/css/pages/all_bookings.css">
-<link rel="stylesheet" href="/css/frameworks/bulma-divider.css">
+    <link rel="stylesheet" href="/css/global/shop.css">
+    <link rel="stylesheet" href="/css/pages/all_bookings.css">
+    <link rel="stylesheet" href="/css/frameworks/bulma-divider.css">
 {% endblock %}
 
 
 {% block content %}
-<section class="section has-background-white is-medium">
-    <div class="container">
-        <h1 class="is-size-1 has-text-weight-bold mt-6">Your Bookings</h1>
-        <h3 class="subtitle">List of all bookings you have made.</h3>
-    </div>
-</section>
+    <section class="section has-background-white is-medium">
+        <div class="container">
+            <h1 class="is-size-1 has-text-weight-bold mt-6">Your Bookings</h1>
+            <h3 class="subtitle">List of all bookings you have made.</h3>
+        </div>
+    </section>
 
-<section class="section">
-    <div class="container">
-        <div class="box">
-            <div class="columns">
-                <div class="column">
-                    <p class="subtitle">Upcoming Tours</p>
-                    <table class='table is-striped is-fullwidth'>
-                        {% set content = [] %}
-                        {% for item in booking_list %}
-                            {% if item.process_step == 6 %}
-                                {{ content.append(item) |default("", True) }}
-                                <tr>
-                                    <td>{{ item.book_date }}</td>
-                                    <td>
-                                        <a href="/bookings/{{ item['_id'] }}">{{ listings[loop.index0].tour_name }}</a>
-                                    </td>
-                                </tr>
-                            {% endif %}
-                        {% endfor %}
-                            </table>
+    <section class="section">
+        <div class="container">
+            <div class="box">
+                <div class="columns">
+                    <div class="column">
+                        <p class="subtitle">Upcoming Tours</p>
+                        <table class='table is-striped is-fullwidth'>
+                            {% set content = [] %}
+                            {% for item in booking_list %}
+                                {% if item.process_step == 6 %}
+                                    {{ content.append(item) |default("", True) }}
+                                    <tr>
+                                        <td>{{ item.book_date }}</td>
+                                        <td>
+                                            <a href="/bookings/{{ item['_id'] }}">{{ listings[loop.index0].tour_name }}</a>
+                                        </td>
+                                    </tr>
+                                {% endif %}
+                            {% endfor %}
+                        </table>
                         {% if content | length == 0 %}
                             <p class="has-text-centered">You have no Upcoming tours.</p>
                         {% endif %}
-                </div>
-                <div class="divider is-vertical is-right"></div>
-                <div class="column">
-                    <p class="subtitle">Required Action</p>
-                    <table class='table is-striped is-fullwidth'>
-                        {% set content = [] %}
-                        {% for item in booking_list %}
-                        {% if item.process_step in (1, 3, 5, 6, 7) %}
-                        {{ content.append(item) |default("", True) }}
-                        <tr>
-                            <td><b>{{ listings[loop.index0].tour_name }}</b></td>
-                            {% if item.process_step == 1 %}
-                            <td><a href="/bookings/{{ item['_id'] }}">Submit Requirements</a></td>
-                            {% elif item.process_step == 3 %}
-                            <td><a href="/bookings/{{ item['_id'] }}">Review Custom Itinerary & Charges</a></td>
-                            {% elif item.process_step == 5 %}
-                            <td><a href="/bookings/{{ item['_id'] }}">Make Payment</a></td>
-                            {% elif item.process_step == 6 %}
-                            <td><a href="/bookings/{{ item['_id'] }}">Complete Tour</a></td>
-                            {% elif item.process_step == 7 %}
-                            <td><a href="/bookings/{{ item['_id'] }}">Leave Feedback</a></td>
-                            {% endif %}
-                        </tr>
-                        {% endif %}
-                        {% endfor %}
-                    </table>
+                    </div>
+                    <div class="divider is-vertical is-right"></div>
+                    <div class="column">
+                        <p class="subtitle">Required Action</p>
+                        <table class='table is-striped is-fullwidth'>
+                            {% set content = [] %}
+                            {% for item in booking_list %}
+                                {% if item.process_step in (1, 3, 5, 6, 7) %}
+                                    {{ content.append(item) |default("", True) }}
+                                    <tr>
+                                        <td><b>{{ listings[loop.index0].tour_name }}</b></td>
+                                        {% if item.process_step == 1 %}
+                                            <td><a href="/bookings/{{ item['_id'] }}">Submit Requirements</a></td>
+                                        {% elif item.process_step == 3 %}
+                                            <td><a href="/bookings/{{ item['_id'] }}">Review Custom Itinerary &
+                                                Charges</a></td>
+                                        {% elif item.process_step == 5 %}
+                                            <td><a href="/bookings/{{ item['_id'] }}">Make Payment</a></td>
+                                        {% elif item.process_step == 6 %}
+                                            <td><a href="/bookings/{{ item['_id'] }}">Complete Tour</a></td>
+                                        {% elif item.process_step == 7 %}
+                                            <td><a href="/bookings/{{ item['_id'] }}">Leave Feedback</a></td>
+                                        {% endif %}
+                                    </tr>
+                                {% endif %}
+                            {% endfor %}
+                        </table>
                         {% if content | length == 0 %}
                             <p class="has-text-centered">All kept up to speed.</p>
                         {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    </div>
-</section>
+        </div>
+    </section>
 
-<!--START: Dropdown-->
-<!-- <section class='section'>
-    <div class='container has-text-centered'>
-        <div class="control">
-            <div class="select">
-                <select>
-                    <option>Current Bookings</option>
-                    <option>Completed</option>
-                </select>
+    <!--START: Dropdown-->
+    <!-- <section class='section'>
+        <div class='container has-text-centered'>
+            <div class="control">
+                <div class="select">
+                    <select>
+                        <option>Current Bookings</option>
+                        <option>Completed</option>
+                    </select>
+                </div>
             </div>
         </div>
-    </div>
-</section> -->
-<!--END: Dropdown-->
+    </section> -->
+    <!--END: Dropdown-->
 
-{# {% if 1 <= item.process_step <=4 %}#} {# <span class="tag is-info is-light mb-4">Planning</span>#}
+    {# {% if 1 <= item.process_step <=4 %}#} {# <span class="tag is-info is-light mb-4">Planning</span>#}
     {#{% elif 4 < item.process_step < 7 %}#} {# <span class="tag is-success is-light mb-4">Confirmed</span>#}
-        {#{% elif item.process_step >= 7 %}#}
-        {# <span class="tag is-warning is-light mb-4">Completed</span>#}
-        {#{% endif %}#}
+    {#{% elif item.process_step >= 7 %}#}
+    {# <span class="tag is-warning is-light mb-4">Completed</span>#}
+    {#{% endif %}#}
 
-        <section class="section">
-            <div class="container">
-                {% if booking_list == [] %}
-                <div class="has-text-centered">Nothing to display here. <a href="/discover">Start your first tour with Tourisit today.</a></div>
-                {% else %}
+    <section class="section">
+        <div class="container">
+            {% if booking_list == [] %}
+                <div class="has-text-centered">Nothing to display here. <a href="/discover">Start your first tour with
+                    Tourisit today.</a></div>
+            {% else %}
                 {% for item in booking_list %}
-                {% set list = listings[loop.index0] %}
+                    {% set list = listings[loop.index0] %}
 
-                {% include 'components/listing-card-bookings.html' %}
+                    {% include 'components/listing-card-bookings.html' %}
 
                 {% endfor %}
-                {% endif %}
-            </div>
-        </section>
+            {% endif %}
+        </div>
+    </section>
 
-        <!--START: Scroll to top button-->
-        <button onclick="topFunction()" id="TopBtn" title="Go to top">
-            <i class="fas fa-chevron-up"></i>
-        </button>
-        <!--END: Scroll to top button-->
+    <!--START: Scroll to top button-->
+    <button onclick="topFunction()" id="TopBtn" title="Go to top">
+        <i class="fas fa-chevron-up"></i>
+    </button>
+    <!--END: Scroll to top button-->
 
-        <!--Scroll to top button's js-->
-        <script>
-            //Get the button:
-            mybutton = document.getElementById("TopBtn");
+    <!--Scroll to top button's js-->
+    <script>
+        //Get the button:
+        mybutton = document.getElementById("TopBtn");
 
-            // When the user scrolls down 20px from the top of the document, show the button
-            window.onscroll = function () {
-                scrollFunction()
-            };
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () {
+            scrollFunction()
+        };
 
-            function scrollFunction() {
-                if (document.body.scrollTop > 1200 || document.documentElement.scrollTop > 1200) {
-                    mybutton.style.display = "block";
-                } else {
-                    mybutton.style.display = "none";
-                }
+        function scrollFunction() {
+            if (document.body.scrollTop > 1200 || document.documentElement.scrollTop > 1200) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
             }
+        }
 
-            // When the user clicks on the button, scroll to the top of the document
-            function topFunction() {
-                document.body.scrollTop = 0; // For Safari
-                document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-            }
-        </script>
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0; // For Safari
+            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+        }
+    </script>
 
-        {% endblock %}
+{% endblock %}
