--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="/css/pages/profile.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/css/bulma-carousel.min.css">
     <script>
-    $(document).ready(function () {
-        $('#reportbtn').click(function () {
-            var pfplink = window.location.href;
-            sessionStorage.setItem("pfpLink", pfplink);
+        $(document).ready(function () {
+            $('#reportbtn').click(function () {
+                var pfplink = window.location.href;
+                sessionStorage.setItem("pfpLink", pfplink);
+            });
         });
-    });
     </script>
 {% endblock %}
 
@@ -65,7 +65,8 @@
                                     </div>
                                     <div class="field is-small has-text-right">
                                         <label class="label" for="bio-submit"></label>
-                                        <button type="submit" class="button is-success" id="bio-submit"><i class="fas fa-save"></i>&nbsp;
+                                        <button type="submit" class="button is-success" id="bio-submit"><i
+                                                class="fas fa-save"></i>&nbsp;
                                             Save
                                         </button>
                                         <a class="button is-danger is-light"
@@ -94,35 +95,35 @@
         </div>
     </section>
     <section class="section">
-    <div class="container">
+        <div class="container">
             <!--Reviews as a Customer-->
-    <div>
-    {% if person.user_reviews %}
-        <p>{{person.name}} as a Customer</p>
-        {% for review in person.user_reviews %}
-
-            {% include 'components/review-card.html' %}
-
-        {% endfor %}
-    {% endif %}
-    </div>
-
-    <!--Reviews as a tour guide-->
-    <div>
-        {% if item_list | length > 0 %}
-            <p>{{person.name}} as a Tour Guide</p>
-            {% for item in item_list %}
-                {% if item.tour_reviews %}
-                    {% for review in item.tour_reviews %}
+            <div>
+                {% if person.user_reviews %}
+                    <p>{{ person.name }} as a Customer</p>
+                    {% for review in person.user_reviews %}
 
                         {% include 'components/review-card.html' %}
 
                     {% endfor %}
                 {% endif %}
-            {% endfor %}
-        {% endif %}
-    </div>
-    </div>
+            </div>
+
+            <!--Reviews as a tour guide-->
+            <div>
+                {% if item_list | length > 0 %}
+                    <p>{{ person.name }} as a Tour Guide</p>
+                    {% for item in item_list %}
+                        {% if item.tour_reviews %}
+                            {% for review in item.tour_reviews %}
+
+                                {% include 'components/review-card.html' %}
+
+                            {% endfor %}
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
+            </div>
+        </div>
     </section>
 
 
