--- a/templates/tourGuides/testTime.html
+++ b/templates/tourGuides/testTime.html
@@ -1,116 +1,116 @@
 {% extends 'baseTour.html' %}
 
 {% block scripts %}
-<link rel="stylesheet" href="/css/global/shop.css">
-<link rel="stylesheet" href="/css/pages/index.css">
-<script src='/js/form-persistence.js'></script>
-<script>
+    <link rel="stylesheet" href="/css/global/shop.css">
+    <link rel="stylesheet" href="/css/pages/index.css">
+    <script src='/js/form-persistence.js'></script>
+    <script>
 
-    let listno = 0
-    let locno = 0
-    var itemList = []
-    var locList = []
-    var locationTags = document.getElementById('locations')
-    var dayList = []
+        let listno = 0
+        let locno = 0
+        var itemList = []
+        var locList = []
+        var locationTags = document.getElementById('locations')
+        var dayList = []
 
 
-    function AppendtoDay() {
-        $("input:checkbox[name=tour_days]:checked").each(function () {
-            dayList.push($(this).val() + '#$%^#') 
+        function AppendtoDay() {
+            $("input:checkbox[name=tour_days]:checked").each(function () {
+                dayList.push($(this).val() + '#$%^#')
+            });
+            AppendtoDayList()
+        }
+
+        function AppendtoDayList() {
+            current_day_list = document.getElementById('tour-days-list')
+            current_day_list.value = Array.from(dayList)
+            console.log(current_day_list)
+        }
+
+
+        function AppendtoLocation() {
+            var loc = document.getElementById('tour-loc').value
+            current_locs = document.getElementById('locations')
+
+            // var template =
+            // `
+            //     <span class="tag is-info">${loc}</span>
+            // `
+
+            // var template =
+            // `
+            //     <span class="tag is-info">${loc}<a onclick="locList.splice(${locno}, 1, 'None'); current_locs.removeChild(template)>here</a></span>
+            // `
+
+            var template = document.createElement('span')
+            template.className = "tag is-info"
+            // template.id = `loc_${locno}`
+            template.textContent = loc
+            current_locs.appendChild(template)
+
+
+            let removeElement = document.createElement('a');
+            removeElement.textContent = '\u274c';
+            removeElement.id = locno
+            removeElement.addEventListener('click', () => {
+                current_locs.removeChild(template)
+                console.log(`Loc no is: ${locno}`)
+                locList.splice(removeElement.id, 1, 'None')
+                AppendtoLocationList()
+            });
+            template.appendChild(removeElement);
+
+            // current_locs.innerHTML += template
+            locList.push(loc + '#$%^#')
+            console.log(locList)
+
+            locno += 1
+
+        }
+
+        function AppendtoLocationList() {
+            current_list = document.getElementById('tour-locations-list')
+            current_list.value = Array.from(locList)
+            console.log(current_list)
+        }
+
+        function AppendtoItem() {
+            current_list = document.getElementById('tour-item-list')
+            current_list.value = Array.from(itemList)
+            console.log(current_list)
+            console.log(current_list)
+        }
+
+
+        function UpdateItems() {
+            document.getElementById("addItemButton").click()
+        }
+
+        // Ensure at least one day is selected
+        function validateDays() {
+            return $("input:checkbox[name=tour_days]:checked").length > 0
+        }
+
+        // Must click the add listing button in order to get the updated version
+        $('#makeListingForm').submit(() => {
+            UpdateItems()
+            AppendtoDay()
+            // if (validateDays == true) {
+            //     return true
+            // }
+            return true
         });
-        AppendtoDayList()
-    }
 
-    function AppendtoDayList() {
-        current_day_list = document.getElementById('tour-days-list')
-        current_day_list.value = Array.from(dayList)
-        console.log(current_day_list)
-    }
+        window.onbeforeunload = () => {
+            Persistence()
+        }
 
 
-    function AppendtoLocation() {
-        var loc = document.getElementById('tour-loc').value
-        current_locs = document.getElementById('locations')
-
-        // var template =
-        // `
-        //     <span class="tag is-info">${loc}</span>
-        // `
-
-        // var template =
-        // `
-        //     <span class="tag is-info">${loc}<a onclick="locList.splice(${locno}, 1, 'None'); current_locs.removeChild(template)>here</a></span>
-        // `
-
-        var template = document.createElement('span')
-        template.className = "tag is-info"
-        // template.id = `loc_${locno}`
-        template.textContent = loc
-        current_locs.appendChild(template)
-
-
-        let removeElement = document.createElement('a');
-        removeElement.textContent = '\u274c';
-        removeElement.id = locno
-        removeElement.addEventListener('click', () => {
-            current_locs.removeChild(template)
-            console.log(`Loc no is: ${locno}`)
-            locList.splice(removeElement.id, 1, 'None')
-            AppendtoLocationList()
-        });
-        template.appendChild(removeElement);
-
-        // current_locs.innerHTML += template
-        locList.push(loc + '#$%^#')
-        console.log(locList)
-
-        locno += 1
-
-    }
-
-    function AppendtoLocationList() {
-        current_list = document.getElementById('tour-locations-list')
-        current_list.value = Array.from(locList)
-        console.log(current_list)
-    }
-
-    function AppendtoItem() {
-        current_list = document.getElementById('tour-item-list')
-        current_list.value = Array.from(itemList)
-        console.log(current_list)
-        console.log(current_list)
-    }
-
-
-    function UpdateItems() {
-        document.getElementById("addItemButton").click()
-    }
-
-    // Ensure at least one day is selected
-    function validateDays() {
-        return $("input:checkbox[name=tour_days]:checked").length > 0
-    }
-
-    // Must click the add listing button in order to get the updated version
-    $('#makeListingForm').submit(() => {
-        UpdateItems()
-        AppendtoDay()
-        // if (validateDays == true) {
-        //     return true
-        // }
-        return true
-    });
-
-    window.onbeforeunload = () => {
-        Persistence()
-    }
-
-
-    function AddItinerary() {
-        // Dont delete element from array, but replace with 'None' instead. So can still continue to use the indexing
-        current_item = document.getElementById('tour-items')
-        text =
-            `
+        function AddItinerary() {
+            // Dont delete element from array, but replace with 'None' instead. So can still continue to use the indexing
+            current_item = document.getElementById('tour-items')
+            text =
+                `
                 <li id='list_${listno}'>
                     <div class="field has-addons" >
                         <div class="control is-expanded">
@@ -124,85 +124,83 @@
                     </div>
                 </li>
             `
-        $("#itinerary-list").append(`${text}`)
-        itemList.push(current_item.value + '#$%^#')
-        current_item.value = ''
-        listno += 1
-    }
+            $("#itinerary-list").append(`${text}`)
+            itemList.push(current_item.value + '#$%^#')
+            current_item.value = ''
+            listno += 1
+        }
 
-</script>
+    </script>
 
 
 
 {% endblock %}
 
 {% block content %}
-{% from "_formhelper.html" import render_field %}
-<section class="section has-background-white">
-    <div class="container">
-        <h1 class="is-size-1 has-text-weight-bold mt-6">New tour listing</h1>
-    </div>
-</section>
+    {% from "_formhelper.html" import render_field %}
+    <section class="section has-background-white">
+        <div class="container">
+            <h1 class="is-size-1 has-text-weight-bold mt-6">New tour listing</h1>
+        </div>
+    </section>
 
-<section class='section'>
-    <div class="container">
-        <form id='makeListingForm' class="form-horizontal" enctype="multipart/form-data"
-            action="{{ url_for('testtime') }}" method="POST">
-            {{ form.csrf_token }}
-            <fieldset>
-
-
+    <section class='section'>
+        <div class="container">
+            <form id='makeListingForm' class="form-horizontal" enctype="multipart/form-data"
+                  action="{{ url_for('testtime') }}" method="POST">
+                {{ form.csrf_token }}
+                <fieldset>
 
 
-                <label class="label">Tour Timing</label>
-                <div class='field'>
-                    <div class='control level-left'>
-                        {{ form.tour_start_time(id='tour-start-time', class='dropdown-item level-item') }} <p class='level-item'>-</p>  {{ form.tour_end_time(id='tour-end-time', class='dropdown-item level-item') }}
-                        <br>
-                        <ul>
-                            {% for error in form.tour_end_time.errors %}
-                            <li class="has-text-danger"> {{ error }}</li>
-                            {% endfor %}
-                        </ul>
+                    <label class="label">Tour Timing</label>
+                    <div class='field'>
+                        <div class='control level-left'>
+                            {{ form.tour_start_time(id='tour-start-time', class='dropdown-item level-item') }} <p
+                                class='level-item'>
+                            -</p> {{ form.tour_end_time(id='tour-end-time', class='dropdown-item level-item') }}
+                            <br>
+                            <ul>
+                                {% for error in form.tour_end_time.errors %}
+                                    <li class="has-text-danger"> {{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
-                </div>
 
 
-
-
-                <div class="field">
-                    <div class="control">
-                        <input type='submit' value='List tour' id="tour-submit" name="tour-submit"
-                            class="button is-success">
+                    <div class="field">
+                        <div class="control">
+                            <input type='submit' value='List tour' id="tour-submit" name="tour-submit"
+                                   class="button is-success">
+                        </div>
                     </div>
-                </div>
 
-            </fieldset>
-        </form>
-    </div>
-</section>
+                </fieldset>
+            </form>
+        </div>
+    </section>
 
-<script>
+    <script>
 
-    var picture = null
+        var picture = null
 
-    function toBase64(file) {
-        var reader = new FileReader()
-        reader.readAsDataURL(file)
-        reader.onload = function () {
-            picture = reader.result
-            $('#currentImg').attr('src', reader.result);
+        function toBase64(file) {
+            var reader = new FileReader()
+            reader.readAsDataURL(file)
+            reader.onload = function () {
+                picture = reader.result
+                $('#currentImg').attr('src', reader.result);
+            }
+            reader.onerror = function (error) {
+                console.log('Error: ', error)
+            }
         }
-        reader.onerror = function (error) {
-            console.log('Error: ', error)
-        }
-    }
 
-    $("#uploadImg").change(() => {
-        flag = toBase64($("#uploadImg").prop('files')[0])
-        console.log('this worked')
-    });
+        $("#uploadImg").change(() => {
+            flag = toBase64($("#uploadImg").prop('files')[0])
+            console.log('this worked')
+        });
 
 
-</script>
+    </script>
 {% endblock %}
